--- a/first-project-deployable/index.html
+++ b/first-project-deployable/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Immigration Service</title>
+    <link rel="icon" href="./image/imilogo.jpg.png" type="image/x-icon">
     <!-- <link rel="icon" href="./image/favicon.icon" type="image/x-icon"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="main.css">
