--- a/first-project-deployable/Need-visa.html
+++ b/first-project-deployable/Need-visa.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./image/imilogo.jpg.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do You Need a Visa?</title>
     <link rel="stylesheet" href="./visa.style.css">
@@ -53,6 +54,10 @@
             <div class="form-group">
                 <label for="age">Age:</label>
                 <input type="number" id="age" name="age" placeholder="Enter your age" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
             </div>
         </div>
 
